[package]
name = "auth_service"
version = "0.1.0"
edition = "2021"

[dependencies]
validator = { version = "0.18", features = ["derive"] }
actix-cors = "0.7.0"
actix-web = "4.9.0"
async-trait = "0.1.82"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
thiserror = "1.0.63"
